# graduate_proj

./: .gitignore  CMakeLists.txt  IO 缓冲机制参数调优图.py  README.md  a.py  b.py  batch_size_sweep.sh  c.py  note.md  run_all_benchmarks.sh  内存效率对比图.py  并行加速比图.py  微观参数空间全景图.py  总体性能对比图.py  执行开销构成图.py  混合并行模型性能对比图.py  系统吞吐量热力图.py
configs/: baseline.cfg  hdf5.cfg  multifile.cfg
docs/: 答辩可用说明.txt
include/: circuit.hpp  common.hpp  config.hpp  engine.hpp  experiment.hpp  storage.hpp
results/: final_summary.csv
results/batch_size_sweep/: batch_size_sweep_results.csv
results/batch_size_sweep/hdf5_bs1024/: summary.csv
results/batch_size_sweep/hdf5_bs128/: summary.csv
results/batch_size_sweep/hdf5_bs16384/: summary.csv
results/batch_size_sweep/hdf5_bs2048/: summary.csv
results/batch_size_sweep/hdf5_bs256/: summary.csv
results/batch_size_sweep/hdf5_bs32768/: summary.csv
results/batch_size_sweep/hdf5_bs4096/: summary.csv
results/batch_size_sweep/hdf5_bs512/: summary.csv
results/batch_size_sweep/hdf5_bs64/: summary.csv
results/batch_size_sweep/hdf5_bs65536/: summary.csv
results/batch_size_sweep/hdf5_bs8192/: summary.csv
results/batch_size_sweep/multifile_bs1024/: summary.csv
results/batch_size_sweep/multifile_bs128/: summary.csv
results/batch_size_sweep/multifile_bs16384/: summary.csv
results/batch_size_sweep/multifile_bs2048/: summary.csv
results/batch_size_sweep/multifile_bs256/: summary.csv
results/batch_size_sweep/multifile_bs32768/: summary.csv
results/batch_size_sweep/multifile_bs4096/: summary.csv
results/batch_size_sweep/multifile_bs512/: summary.csv
results/batch_size_sweep/multifile_bs64/: summary.csv
results/batch_size_sweep/multifile_bs65536/: summary.csv
results/batch_size_sweep/multifile_bs8192/: summary.csv
results/benchmarks/: final_comparison.csv  hdf5_log.txt  memory_log.txt  multifile_log.txt
results/benchmarks/hdf5/: summary.csv
results/benchmarks/memory/: summary.csv
results/benchmarks/multifile/: summary.csv
results/memory_test/: summary.csv
results/mpi_benchmarks/: hdf5_mpi_log.txt  memory_mpi_log.txt  mpi_comparison.csv  multifile_mpi_log.txt
results/mpi_benchmarks/hdf5/: summary.csv
results/mpi_benchmarks/memory/: summary.csv
results/mpi_benchmarks/multifile/: summary.csv
results/temp_run/: summary.csv
scripts/: build.sh  run_experiments.sh  run_one.sh  sweep.py
src/: circuit.cpp  config.cpp  engine.cpp  experiment.cpp  main.cpp  storage.cpp
